# dateint

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yaml  docs.yml  publish.yml
api/: index.html
css/: style.css
dateint/: __init__.py  core.py
docs/: api.md  index.md  release_notes.md
docs/api/: core.md
docs/css/: style.css
release_notes/: index.html
search/: search_index.json
src/dateint/: __init__.py  config.py  convert.py  core.py  exception.py
tests/: test_convert.py  test_core.py
