[tool.poetry]
name = "dateint"
version = "0.1.0"
description = "Helper library for arithmetic operation between date/time values represented as integers."
authors = ["Bruno Amaral <amaralbf@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.1"}
tox = "^3.25.0"
mypy = "0.961"
pre-commit = "^2.19.0"
black = "22.6.0"
flake8 = "3.9.2"
isort = "5.10.1"
flake8-docstrings = "^1.6.0"
mkdocs-material = "^8.3.8"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = 'black'

[tool.coverage.run]
branch = true
parallel = true
source = ["dateint"]
command_line = "-m pytest tests"

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
ignore_missing_imports = true
