[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = 'black'

[tool.coverage.run]
branch = true
parallel = true
source = ["dateint"]
command_line = "-m pytest tests"

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
